--- a/ProyectoFinal_RocioMalaga/src/app/components/acerca-de/acerca-de.component.css
+++ b/ProyectoFinal_RocioMalaga/src/app/components/acerca-de/acerca-de.component.css
@@ -23,7 +23,7 @@ div{
         border-radius: 100%;
         box-shadow: 3px 3px 3px ;
         left: 35%;
-        top: 950px;
+        top: 1250px;
     }
 }
 @media (max-width: 399px){
@@ -33,7 +33,7 @@ div{
         border-radius: 100%;
         box-shadow: 3px 3px 3px ;
         left: 35%;
-        top: 1040px;
+        top: 1270px;
     }
 }
 
@@ -43,5 +43,6 @@ div{
 #nombre{
     font-weight: bold;
     margin-top: 30%;
+    font-size: 20px;
 
 }
