--- a/ProyectoFinal_RocioMalaga/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoFinal_RocioMalaga/src/app/components/acerca-de/acerca-de.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
    <p id="nombre">Rocio Malaga</p>
-   <p>Full Stack Developer Jr</p> 
+   <p id="titulo">Full Stack Developer Jr</p> 
 </div>
 <div class="col-xs-12 col-sm-8 col-ms-8 col-lg-8">
     <span>
