--- a/ProyectoFinal_RocioMalaga/src/app/components/experiencia/experiencia.component.html
+++ b/ProyectoFinal_RocioMalaga/src/app/components/experiencia/experiencia.component.html
@@ -1,21 +1,21 @@
 <div class="row">
-<h1>Experiencia laboral</h1>
+<h1>Experiencia </h1>
 <div class="col-lg-1"></div>
 <div class="col-lg-11">
     <ul>
-        <li><h1>Trabajo 1</h1> - 
+        <li><h3>Trabajo 1</h3> - 
         <h3>(years)</h3></li>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa necessitatibus voluptates odio ipsa sint nihil vitae dolorem fugiat alias eaque dolorum assumenda adipisci consectetur repellendus sed, aut, placeat, praesentium voluptas?
         </p>
     </ul>
     <ul>
-        <li><h1>Trabajo 2</h1> - 
+        <li><h3>Trabajo 2</h3> - 
         <h3>(years)</h3></li>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa necessitatibus voluptates odio ipsa sint nihil vitae dolorem fugiat alias eaque dolorum assumenda adipisci consectetur repellendus sed, aut, placeat, praesentium voluptas?
         </p>
     </ul>
     <ul>
-        <li><h1>Trabajo 3</h1> - 
+        <li><h3>Trabajo 3</h3> - 
         <h3>(years)</h3></li>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa necessitatibus voluptates odio ipsa sint nihil vitae dolorem fugiat alias eaque dolorum assumenda adipisci consectetur repellendus sed, aut, placeat, praesentium voluptas?
         </p>
