--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/acerca-de/acerca-de.component.html
@@ -3,7 +3,7 @@
     <img src="../../../assets/photo-perfil 1.jpg" class="img-fluid" id="fotodeperfil">
 </div>
 <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-   <p id="nombre">Rocio Malaga</p>
+   <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
    <p id="titulo">Full Stack Developer Jr</p> 
 </div>
 <div class="col-xs-12 col-sm-8 col-ms-8 col-lg-8">
