--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/experiencia/experiencia.component.html
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/experiencia/experiencia.component.html
@@ -1,24 +1,31 @@
 <div class="row">
-<h1>Experiencia </h1>
-<div class="col-lg-1"></div>
-<div class="col-lg-11">
-    <ul>
-        <li><h3>Trabajo 1</h3> - 
-        <h3>(years)</h3></li>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa necessitatibus voluptates odio ipsa sint nihil vitae dolorem fugiat alias eaque dolorum assumenda adipisci consectetur repellendus sed, aut, placeat, praesentium voluptas?
-        </p>
-    </ul>
-    <ul>
-        <li><h3>Trabajo 2</h3> - 
-        <h3>(years)</h3></li>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa necessitatibus voluptates odio ipsa sint nihil vitae dolorem fugiat alias eaque dolorum assumenda adipisci consectetur repellendus sed, aut, placeat, praesentium voluptas?
-        </p>
-    </ul>
-    <ul>
-        <li><h3>Trabajo 3</h3> - 
-        <h3>(years)</h3></li>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa necessitatibus voluptates odio ipsa sint nihil vitae dolorem fugiat alias eaque dolorum assumenda adipisci consectetur repellendus sed, aut, placeat, praesentium voluptas?
-        </p>
-    </ul>
-</div>
+    <h1>Experiencia laboral</h1>
+    <div class="col-lg-2">
+        <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
+            Nueva Experiencia
+        </button>
+    </div>
+
+    <div class="col lg 1"></div>
+    <div class="col-lg-11">
+        <table class="table">
+            <tbody>
+                <tr *ngFor="let Experiencia of expe">
+                    <td>
+                        <h2>{{Experiencia.nombreE}}</h2>
+                    </td>
+                    <td>{{Experiencia.descripcionE}}</td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
+                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                    </td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-danger" (click)="delete(Experiencia.id)">
+                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
