--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/educacion/educacion.component.html
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/educacion/educacion.component.html
@@ -1,25 +1,31 @@
 <div class="row">
-    <h1>Educación</h1>
-    <div class="col-lg-1"></div>
+    <h1>Educacion</h1>
+    <div class="col-lg-2">
+        <button type="button" class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">
+            Agregar Educacion
+        </button>
+    </div>
+
+    <div class="col lg 1"></div>
     <div class="col-lg-11">
-        <ul>
-            <li><h3>Estudio 1</h3> - 
-            <h3>(years)</h3></li>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa necessitatibus voluptates odio ipsa sint nihil vitae dolorem fugiat alias eaque dolorum assumenda adipisci consectetur repellendus sed, aut, placeat, praesentium voluptas?
-            </p>
-        </ul>
-        <ul>
-            <li><h3>Estudio 2</h3> - 
-            <h3>(years)</h3></li>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa necessitatibus voluptates odio ipsa sint nihil vitae dolorem fugiat alias eaque dolorum assumenda adipisci consectetur repellendus sed, aut, placeat, praesentium voluptas?
-            </p>
-        </ul>
-        <ul>
-            <li><h3>Estudio 3</h3> - 
-            <h3>(years)</h3></li>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa necessitatibus voluptates odio ipsa sint nihil vitae dolorem fugiat alias eaque dolorum assumenda adipisci consectetur repellendus sed, aut, placeat, praesentium voluptas?
-            </p>
-        </ul>
+        <table class="table">
+            <tbody>
+                <tr *ngFor="let Educacion of educacion">
+                    <td>
+                        <h2>{{Educacion.nombreE}}</h2>
+                    </td>
+                    <td>{{Educacion.descripcionE}}</td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
+                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                    </td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-danger" (click)="delete(Educacion.id)">
+                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    </div>
-    
+
+</div>
