--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/acerca-de/acerca-de.component.html
@@ -4,12 +4,12 @@
 </div>
 <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
    <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
-   <p id="titulo">Full Stack Developer Jr</p> 
+   <p id="titulo" >Full Stack Developer Jr</p> 
 </div>
 <div class="col-xs-12 col-sm-8 col-ms-8 col-lg-8">
     <span>
         <h1>Acerca de mí</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nam eius quidem neque perspiciatis sint necessitatibus suscipit! Natus, ullam facilis ipsam laudantium minima consequuntur alias excepturi tempore aperiam unde dolore.</p>
+        <p>Mi nombre es Rocio Malaga, soy de Mar del plata, estoy dando mis primeros pasos en en mundo de la programacion, me concidero una persona perseverante, aplicada, curiosa y con ganas de aprender.</p>
     </span>
 </div>
 </div>
