--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/hys/hys.component.html
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/hys/hys.component.html
@@ -11,7 +11,7 @@
         [titleFontSize]="'2em'"
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="2"
-        [outerStrokeColor]="'black'"
+        [outerStrokeColor]= "'#212529'"
         [innerStrokeColor]="'white'"
         [animation]="true"
         [animationDuration]="600"
@@ -28,7 +28,7 @@
             [titleFontSize]="'2em'"
             [outerStrokeWidth]="16"
             [innerStrokeWidth]="2"
-            [outerStrokeColor]="'black'"
+            [outerStrokeColor]="'#212529'"
             [innerStrokeColor]="'white'"
             [animation]="true"
             [animationDuration]="600"
@@ -45,7 +45,7 @@
                 [titleFontSize]="'2em'"
                 [outerStrokeWidth]="16"
                 [innerStrokeWidth]="2"
-                [outerStrokeColor]="'black'"
+                [outerStrokeColor]="'#212529'"
                 [innerStrokeColor]="'white'"
                 [animation]="true"
                 [animationDuration]="600"
@@ -62,7 +62,7 @@
                     [titleFontSize]="'2em'"
                     [outerStrokeWidth]="16"
                     [innerStrokeWidth]="2"
-                    [outerStrokeColor]="'black'"
+                    [outerStrokeColor]="'#212529'"
                     [innerStrokeColor]="'white'"
                     [animation]="true"
                     [animationDuration]="600"
@@ -79,7 +79,7 @@
                         [titleFontSize]="'2em'"
                         [outerStrokeWidth]="16"
                         [innerStrokeWidth]="2"
-                        [outerStrokeColor]="'black'"
+                        [outerStrokeColor]="'#212529'"
                         [innerStrokeColor]="'white'"
                         [animation]="true"
                         [animationDuration]="600"
@@ -96,7 +96,7 @@
                             [titleFontSize]="'2em'"
                             [outerStrokeWidth]="16"
                             [innerStrokeWidth]="2"
-                            [outerStrokeColor]="'black'"
+                            [outerStrokeColor]="'#212529'"
                             [innerStrokeColor]="'white'"
                             [animation]="true"
                             [animationDuration]="600"
