--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/proyecto/proyecto.component.html
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/proyecto/proyecto.component.html
@@ -2,11 +2,13 @@
     <h1>Proyectos</h1>
     <div class="contenedor">
         <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-            <h3>Porfolio-Argentina Programa</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, harum laborum pariatur voluptate praesentium iusto in aspernatur vitae saepe laboriosam, aut soluta quod voluptates magnam. Deleniti iure nihil ea corrupti!</p>
+            <h3>Portfolio-Argentina Programa</h3>
+            <p>Con los conocimientos adquiridos a lo largo del curso, creamos nuestro fotfolio. 
+                Para el Frontend utilizamos: HTML, CSS, Javascript, TypeScrip , Angular y booststrap.
+                Para el Backend Spring Boot, Postman y DevOps </p>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-        <img src="../../../assets/Img-AP.png" class="img-fluid img-proyecto">
+        <img src="../../../assets/Img-AP.png" style="border: 1px solid rgb(255, 255, 255)"class="img-fluid img-proyecto">
         </div>
     </div>
 </div>
