--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/acerca-de/acerca-de.component.css
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/acerca-de/acerca-de.component.css
@@ -2,8 +2,14 @@
     padding: 20px;
 }
 div{
-    background-color: #989b9b;
+    background-color: #000000;
     text-align: center;
+}
+h1{
+    color: white;
+}
+p{
+    color: white;
 }
 /*Estilo de la foto de perfil*/
 @media (min-width: 576px){
@@ -34,5 +40,10 @@ div{
     font-weight: bold;
     margin-top: 30%;
     font-size: 20px;
+    color: white;
+}
 
+/*etiqueta titulo*/
+#titulo{
+    color: white;
 }
