--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/educacion/educacion.component.html
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/educacion/educacion.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <h1>Educacion</h1>
+    <h1>Educación</h1>
     <div class="col-lg-2">
         <button type="button" class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">
-            Agregar Educacion
+            Agregar Educación
         </button>
     </div>
 
@@ -16,11 +16,11 @@
                     </td>
                     <td>{{Educacion.descripcionE}}</td>
                     <td *ngIf="isLogged">
-                        <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
+                        <button class="btn btn-light btn-sm" routerLink="/editedu/{{Educacion.id}}">
                             <i class="bi bi-pencil-fill"></i> EDITAR</button>
                     </td>
                     <td *ngIf="isLogged">
-                        <button class="btn btn-danger" (click)="delete(Educacion.id)">
+                        <button class="btn btn-danger btn-sm" (click)="delete(Educacion.id)">
                             <i class="bi bi-trash-fill"></i> BORRAR</button>
                     </td>
                 </tr>
