--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/experiencia/experiencia.component.html
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/experiencia/experiencia.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h1>Experiencia laboral</h1>
+    <h1>Experiencia</h1>
     <div class="col-lg-2">
         <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
             Nueva Experiencia
@@ -16,11 +16,11 @@
                     </td>
                     <td>{{Experiencia.descripcionE}}</td>
                     <td *ngIf="isLogged">
-                        <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
+                        <button class="btn btn-light btn-sm" routerLink="/editexp/{{Experiencia.id}}">
                             <i class="bi bi-pencil-fill"></i> EDITAR</button>
                     </td>
                     <td *ngIf="isLogged">
-                        <button class="btn btn-danger" (click)="delete(Experiencia.id)">
+                        <button class="btn btn-danger btn-sm" (click)="delete(Experiencia.id)">
                             <i class="bi bi-trash-fill"></i> BORRAR</button>
                     </td>
                 </tr>
