--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/footer/footer.component.css
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/footer/footer.component.css
@@ -1,5 +1,5 @@
 .row{
-    background-color: #989b9b;
+    background-color: #000000;
 }
    footer{
     color: #fefefe;
@@ -7,6 +7,6 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    box-shadow: 2px -2px 5px #999;
+    box-shadow: 2px -1px 1px rgb(255, 255, 255);
    }
 
