--- a/ProyectoFinal_RocioMalaga/Frontend/src/app/components/proyecto/proyecto.component.css
+++ b/ProyectoFinal_RocioMalaga/Frontend/src/app/components/proyecto/proyecto.component.css
@@ -1,13 +1,18 @@
+h1{
+    color: white;
+}
 .row{
     padding: 20px;
-    background-color:  #989b9b;
+    background-color:  #000000;
 }
 .contenedor{
     width: auto;
+    color: white;
 }
 .parte1, .parte2{
     display: inline-block;
     text-align: justify;
+   
 }
 .img-proyecto{
     background-color: black;
