--- a/ProyectoFinal_RocioMalaga/FrontEnd/src/app/components/educacion/neweducacion.component.html
+++ b/ProyectoFinal_RocioMalaga/FrontEnd/src/app/components/educacion/neweducacion.component.html
@@ -1,13 +1,14 @@
+
 <div class="container">
     <div class="row" >
         <div >
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE" style="color: white;">Nombre de la institucion</label>
+                    <label for="nombreE">Nombre de la institucion</label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionE"  style="color: white;">Descripcion de sus estudios</label>
+                    <label for="descripcionE">Descripcion de sus estudios</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                 </div>
                 <button class="btn btn-dark">
